    XML-based output.
- Added: automatic Wiki markup printing of command line options
- Added: export and import of affine transformations in ITK file format for
    exchange with Slicer.
- Added: new class, cmtk::TransformationToNativeSpacesAffine, to change an
    affine transformation under changes of reference and floating image
    coordinate spaces.

- Removed: multiple redundant command line parameters of the "warp" tool have
    been retired. We are only retaining options that differ from the default
    values.


Release CMTK-1.0.2 (2009-07-24):

- API: all igsGetSetXXX macros are now cmtkGetSetXXX, and they all define the
    field name with a "m_" prefix to avoid type/field name collisions.
- API: more elegant design of noise estimator classes that work on TypedArray
    objects. Mike's experimental ML noise estimator implementations moved to
    "Unstable" library.
- API: new wrapper class "cmtk::HashMapSTL" hides the various STL hash map
    implementations and also adds support for upcoming standard unordered_map
    class.

- Added: source tree now incorporates minimal subset of DCMTK files so we can
    build DICOM support without external dependencies, even on Windows using
    VisualStudio.
- Added: "mcaffine" tool now accepts user-provided initial transformation from
    file [Tracker #3925].
- Added: cmtk::CommandLine class now automatically prints parameter defaults
    in "--help" output.

- Fixed: numerous uninitialized data situations identified by valgrind memory
    checker
- Fixed: incomplete computation when using "--sampling-density" option of
    "congeal" tool.
- Fixed: Slicer can now detect CMTK tools as plugins via their response to
    "--xml"; note that the XML description itself is not fully correct and
    functional yet.
- Fixed: testing and configuration were out of order in top-level
    CMakeLists.txt, resulting in build problems.
- Fixed: "film" tool now uses anisotropic Gaussian kernel for volume